# pymcts

./: .gitignore  CLAUDE.md  Makefile  README.md  play.py  pyproject.toml  training.ipynb
docs/: mkdocs.yml
docs/content/: index.md
docs/content/bridgit/: rules.md
docs/content/concepts/: architecture.md  how-it-works.md  mcts.md
docs/content/getting-started/: installation.md  quickstart.md
docs/content/guide/: creating-a-game.md  creating-a-neural-net.md  evaluation.md  training.md
docs/content/reference/: bridgit.md  config.md  core.md  engine.md
docs/superpowers/plans/: 2026-03-22-game-engine-abstraction.md  2026-03-28-elo-rating-system.md  2026-04-09-elo-arena-evaluation.md  2026-04-11-arena-abstraction.md
docs/superpowers/specs/: 2026-03-22-game-engine-abstraction-design.md  2026-03-24-mkdocs-documentation-design.md  2026-03-28-elo-rating-system-design.md  2026-04-11-arena-abstraction-design.md
notebooks/: analysis.ipynb  arena.ipynb  elo.ipynb  game.ipynb  mcts.ipynb  training.ipynb
src/bridgit/: __init__.py  config.py  game.py  visualizer.py
src/bridgit/ai/: mcts.py  neural_net.py  self_play.py  trainer.py
src/bridgit/core/: __init__.py  arena.py  base_game.py  base_neural_net.py  config.py  data.py  players.py  self_play.py
src/bridgit/game/: bridgit.py  state.py  union_find.py
src/bridgit/games/bridgit/: __init__.py  game.py  neural_net.py
src/bridgit/players/: __init__.py  arena.py  player_factory.py  players.py
src/bridgit/schema/: __init__.py  game_record.py  move.py
src/pymcts/: __init__.py
src/pymcts/arena/: __init__.py  engine.py
src/pymcts/core/: __init__.py  arena.py  base_game.py  base_neural_net.py  config.py  data.py  game_record.py  mcts.py  models.py  players.py  self_play.py  trainer.py
src/pymcts/elo/: __init__.py  rating.py  tournament.py
src/pymcts/games/bridgit/: __init__.py  config.py  game.py  neural_net.py  player.py  visualizer.py
test/: test_game_completion.py  test_mcts_bug.py
test/test_core/: test_base_game.py  test_base_neural_net.py  test_game_record.py  test_mcts.py  test_players.py  test_self_play.py  test_trainer_elo_arena.py
test/test_elo/: test_integration.py  test_rating.py  test_tournament.py
test/test_games/test_bridgit/: test_bridgit_game.py  test_neural_net.py
test/test_integration/: test_full_pipeline.py
trainings/run_2026-03-20_113656/: Untitled
