[project]
name = "bridgit"
version = "0.1.0"
description = "A Python implementation of the Bridgit connection game with AI training capabilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tomasz Juszczyszyn" }
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.12.5",
    "pygame>=2.5.0",
    "pytest>=9.0.2",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ai = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
]
gui = [
    "pygame>=2.5.0",
]
all = [
    "bridgit[dev,ai,gui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridgit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
